ros2_ws/log/build_2021-05-20_11-01-06/robot_description/stderr.log
  File "/home/mpt/Desktop/assgn2/ros2_ws/install/robot_description/lib/python3.8/site-packages/robot_description/user_input.py", line 44
    def self.call_keyboard_service(self, data):
            ^
SyntaxError: invalid syntax

